Notebook to compute histogram over data

--- a/notebooks/data_viz_v0.ipynb
+++ b/notebooks/data_viz_v0.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b32638a2-d1da-46a2-9ab3-c1876cf7d14f",
    "metadata": {},
    "outputs": [],
@@ -27,10 +27,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9ff983aa-e3c1-42fd-8865-82520b80ca46",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib/python3/dist-packages/dask/dataframe/utils.py:14: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+      "  import pandas.util.testing as tm\n",
+      "/home/k3blu3/mldev/lib/python3.8/site-packages/xarray/backends/cfgrib_.py:27: UserWarning: Failed to load cfgrib - most likely there is a problem accessing the ecCodes library. Try `import cfgrib` to get the full error message\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "import datashader as ds\n",
     "from datashader.colors import Elevation\n",
@@ -56,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "154e3bbd-6fe4-4f84-84dd-116ffea2aa2c",
    "metadata": {},
    "outputs": [],
@@ -69,10 +80,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "13e505fb-e2d7-48db-9f0c-1d532ff73bc7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>chip_id</th>\n",
+       "      <th>flood_id</th>\n",
+       "      <th>polarization</th>\n",
+       "      <th>location</th>\n",
+       "      <th>scene_start</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>awc00_vh</td>\n",
+       "      <td>awc00</td>\n",
+       "      <td>awc</td>\n",
+       "      <td>vh</td>\n",
+       "      <td>Bolivia</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>awc00_vv</td>\n",
+       "      <td>awc00</td>\n",
+       "      <td>awc</td>\n",
+       "      <td>vv</td>\n",
+       "      <td>Bolivia</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>awc01_vh</td>\n",
+       "      <td>awc01</td>\n",
+       "      <td>awc</td>\n",
+       "      <td>vh</td>\n",
+       "      <td>Bolivia</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>awc01_vv</td>\n",
+       "      <td>awc01</td>\n",
+       "      <td>awc</td>\n",
+       "      <td>vv</td>\n",
+       "      <td>Bolivia</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>awc02_vh</td>\n",
+       "      <td>awc02</td>\n",
+       "      <td>awc</td>\n",
+       "      <td>vh</td>\n",
+       "      <td>Bolivia</td>\n",
+       "      <td>2018-02-15</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   image_id chip_id flood_id polarization location scene_start\n",
+       "0  awc00_vh   awc00      awc           vh  Bolivia  2018-02-15\n",
+       "1  awc00_vv   awc00      awc           vv  Bolivia  2018-02-15\n",
+       "2  awc01_vh   awc01      awc           vh  Bolivia  2018-02-15\n",
+       "3  awc01_vv   awc01      awc           vv  Bolivia  2018-02-15\n",
+       "4  awc02_vh   awc02      awc           vh  Bolivia  2018-02-15"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df = pd.read_csv(os.path.join(root_dir, meta_file))\n",
     "df.head(5)"
@@ -80,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "979a32f9-7a16-48ff-839a-a9a2c0344319",
    "metadata": {},
    "outputs": [],
@@ -91,13 +195,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "30db9ec2-6adc-4021-b1e3-a31f486480d6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# keep unique chip ids\n",
     "df= df.drop_duplicates(subset=['chip_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "2c2c360c-f62f-4237-9d2a-097d83db8809",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "542"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df)"
    ]
   },
   {
